chore: cleanup from cherry pick